--- a/MAX.html
+++ b/MAX.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>מכשירי יצור</title>
+<title>MAX + - </title>
 <style>
   * { box-sizing: border-box; }
   body {
@@ -104,7 +104,7 @@
 <body>
 
 <div class="container">
-  <div class="title">מכשירי יצור</div>
+  <div class="title">MAX + - </div>
 
   <div class="input-group">
     <label for="nominal">NOM</label>
