--- a/MAX.html
+++ b/MAX.html
@@ -18,8 +18,19 @@
   .primary:hover{background:#222}
   .secondary{background:#ddd}
   .secondary:hover{background:#bbb}
-  .resultBox, .seriesBox{display:none;background:#fff;border:1px solid #ccc;border-radius:.5em;padding:.7em;margin-top:.9rem;font-family:monospace;font-size:1.05rem;direction:ltr;text-align:left}
-  .seriesBox{max-height:220px;overflow:auto}
+  .resultBox, .seriesBox{
+    display:none;
+    background:#fff;
+    border:1px solid #ccc;
+    border-radius:.5em;
+    padding:.7em;
+    margin-top:.9rem;
+    font-family:monospace;
+    font-size:1.05rem;
+    direction:ltr;
+    text-align:center;
+  }
+  .seriesBox{max-height:220px;overflow:auto;text-align:left;direction:ltr}
   .pin{padding:.22em .35em;border-radius:.3em;display:inline-block;width:80px}
   .go{background:#e8f9ed;font-weight:700}
   .go b{color:#0a7f3f}
@@ -92,41 +103,6 @@ function calc(){
   const max = nom + up;
   const min = nom - lo;
 
-  // תוצאה סופית - MAX ו־MIN בלבד
-  resultBox.innerHTML = `<strong>תוצאה:</strong><br>MIN: ${fmt(min)}<br>MAX: ${fmt(max)}`;
-  resultBox.style.display = 'block';
-
-  // סדרת פינים
-  const step = 0.01;
-  const start = Math.ceil(min*100)/100;
-  const end = Math.floor(max*100)/100;
-
-  let html = "";
-  if(start > end){
-    html = "אין פינים בתחום זה";
-  }else{
-    const goVal = start;
-    const noGoVal = end;
-    for(let v=start; v<=end+1e-6; v=Math.round((v+step)*100)/100){
-      const val = fmt(v);
-      if(Math.abs(v-goVal)<1e-6) html += `<div class="pin go">${val} <b>Go</b></div>`;
-      else if(Math.abs(v-noGoVal)<1e-6) html += `<div class="pin nogo">${val} <b>No-Go</b></div>`;
-      else html += `<div class="pin">${val}</div>`;
-    }
-  }
-  box.innerHTML = html;
-  box.style.display='block';
-}
-
-function resetAll(){
-  blurInputs();
-  ['nominal','tolp','tolm'].forEach(id=>document.getElementById(id).value='');
-  document.getElementById('resultBox').style.display='none';
-  document.getElementById('resultBox').innerHTML='';
-  const box=document.getElementById('series');
-  box.innerHTML='';
-  box.style.display='none';
-}
-</script>
-</body>
-</html>
+  // תוצאה ברורה בשורה אחת
+  resultBox.innerHTML = `<strong>תוצאה:</strong><br><span style="font-size:1.1rem"><b>${fmt(max)}</b> ⇐ קדח ⇒ <b>${fmt(min)}</b></span>`;
+  re
