--- a/N6.html
+++ b/N6.html
@@ -1,234 +1,220 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="he" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>מכשירי יצור - גרסת PRO</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+<title>מחשבון דרגות טיב פני שטח – PRO (N לפי Ra)</title>
 <style>
-  :root {
-    --bg: #f6f6f6;
-    --card: #ffffff;
-    --text: #111;
-    --accent: #0b0c10;
-    --border: #ccc;
-    --go: #0a7f3f;
-    --nogo: #b10808;
+  :root{
+    --bg:#0a0c12;--card:#121622;--ink:#f2f2f2;--muted:#a8a8a8;
+    --accent:#3ea6ff;--ok:#37d07f;--bad:#ff4d6d;--shadow:0 8px 30px rgba(0,0,0,.45)
   }
-  * { box-sizing: border-box; }
-  body {
-    margin: 0;
-    font-family: "Heebo", system-ui, sans-serif;
-    background: var(--bg);
-    color: var(--text);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    height: 100vh;
-    overflow-x: hidden;
+  *{box-sizing:border-box;-webkit-tap-highlight-color:transparent}
+  html,body{height:100%}
+  body{
+    margin:0;background:var(--bg);color:var(--ink);
+    font-family:system-ui,-apple-system,"Segoe UI",Roboto,Helvetica,Arial;
+    display:flex;flex-direction:column;min-height:100vh;
+    padding-bottom:env(safe-area-inset-bottom);
   }
-  .container {
-    width: 100%;
-    max-width: 400px;
-    padding: 4vw;
+  header{text-align:center;padding:22px 16px}
+  h1{margin:0 0 6px;font-size:1.6rem;font-weight:800}
+  h1 .tag{color:#001b2d;background:var(--accent);border-radius:999px;padding:2px 10px}
+  .muted{color:var(--muted);font-size:.92rem}
+  .wrap{flex:1;display:flex;justify-content:center;align-items:flex-start;padding:16px}
+  .card{
+    width:100%;max-width:820px;background:var(--card);
+    border-radius:18px;padding:22px;border:1px solid #1d2233;
+    box-shadow:var(--shadow);animation:fadein .35s ease
   }
-  h1 {
-    text-align: center;
-    font-size: 1.3rem;
-    margin-bottom: 1rem;
-    font-weight: 800;
+  @keyframes fadein{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:translateY(0)}}
+  .row{display:flex;flex-wrap:wrap;gap:12px;align-items:flex-end}
+  .field{flex:1 1 220px}
+  label{display:block;font-weight:700;margin-bottom:6px}
+  input[type=number],select,button{
+    width:100%;padding:14px 14px;border-radius:12px;border:1px solid #293041;
+    background:#0e111b;color:var(--ink);font-size:1.02rem;transition:.2s
   }
-  .input-row {
-    display: flex;
-    flex-direction: column;
-    margin: 0.5rem 0;
+  input:focus,select:focus{outline:none;border-color:var(--accent);box-shadow:0 0 0 3px #3ea6ff33}
+  button{
+    background:var(--accent);color:#001b2d;font-weight:900;cursor:pointer;min-width:140px
   }
-  label {
-    font-weight: bold;
-    margin-bottom: 0.2rem;
-    font-size: 0.95rem;
-  }
-  input {
-    padding: 0.6rem;
-    font-size: 1.05rem;
-    border-radius: 0.4rem;
-    border: 1px solid var(--border);
-    text-align: center;
-    direction: ltr;
-    width: 100%;
-    background: var(--card);
-  }
-  input:focus {
-    outline: 2px solid var(--accent);
-  }
-  button {
-    width: 100%;
-    padding: 0.8rem;
-    font-size: 1rem;
-    font-weight: 700;
-    border: none;
-    border-radius: 0.5rem;
-    margin-top: 0.6rem;
-    cursor: pointer;
-    transition: 0.15s;
-  }
-  .primary { background: var(--accent); color: white; }
-  .primary:hover { filter: brightness(1.2); }
-  .secondary { background: #ddd; }
-  .secondary:hover { background: #bbb; }
-
-  .resultBox, .seriesBox {
-    display: none;
-    background: var(--card);
-    border: 1px solid var(--border);
-    border-radius: 0.6rem;
-    padding: 1rem;
-    margin-top: 1rem;
-    font-family: monospace;
-    text-align: center;
-  }
-  .resultBox strong {
-    font-size: 1.1rem;
-    color: var(--accent);
-  }
-  .seriesBox {
-    max-height: 220px;
-    overflow-y: auto;
-    text-align: left;
-    direction: ltr;
-  }
-  .pin {
-    display: inline-block;
-    width: 80px;
-    padding: 0.25rem;
-    border-radius: 0.3rem;
-  }
-  .go { background: #e8f9ed; color: var(--go); font-weight: bold; }
-  .nogo { background: #fdeaea; color: var(--nogo); font-weight: bold; }
-
-  .legend {
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    margin-top: 0.6rem;
-    font-size: 0.9rem;
-  }
-  .dot {
-    width: 0.9em; height: 0.9em; border-radius: 50%;
-    display: inline-block; margin-inline-end: 0.3em;
-  }
-  .dot.go { background: var(--go); }
-  .dot.nogo { background: var(--nogo); }
-
-  @media (max-width: 480px) {
-    .container { padding: 5vw; }
-    h1 { font-size: 1.2rem; }
-    input { font-size: 1rem; }
+  button:hover{transform:translateY(-1px);box-shadow:0 4px 14px #3ea6ff55}
+  button:active{transform:none}
+  .result{margin-top:14px;padding:14px 16px;border-radius:14px;background:#0f1522;border:1px dashed #2c3242}
+  .result h2{margin:0 0 6px;font-size:1.28rem}
+  .chip{display:inline-block;padding:4px 9px;border-radius:10px;border:1px solid #2c3242;margin:4px 4px 0 0}
+  .tagline{display:inline-block;padding:2px 10px;border-radius:999px;background:#102033;border:1px solid #2a3f5a;color:#90c8ff;font-weight:800}
+  table{width:100%;border-collapse:collapse;margin-top:12px;font-variant-numeric:tabular-nums}
+  th,td{border-bottom:1px solid #232838;padding:8px 10px;text-align:center}
+  th{position:sticky;top:0;background:#111626}
+  tr.hit{outline:2px solid var(--ok);background:#0e1c17}
+  footer{text-align:center;color:var(--muted);font-size:.84rem;padding:16px 10px calc(18px + env(safe-area-inset-bottom))}
+  /* מובייל: התאמה לאייפון 12 ומקלדת */
+  @media(max-width:480px){
+    h1{font-size:1.35rem}
+    .card{padding:16px;border-radius:16px}
+    .row{flex-direction:column}
+    input,select,button{font-size:1.04rem}
   }
 </style>
 </head>
 <body>
-<div class="container">
-  <h1>מכשירי יצור - גרסת PRO</h1>
+  <header>
+    <h1>מחשבון N לפי <span class="tagline">Ra</span> – גרסת PRO</h1>
+    <div class="muted">הזן Ra וקבל את דרגת ה-N לפי טבלת ISO 1302 עם המרה ל-µin.</div>
+  </header>
 
-  <div class="input-row">
-    <label>NOM</label>
-    <input id="nominal" type="number" step="0.001" inputmode="decimal">
+  <div class="wrap">
+    <section class="card">
+      <div class="row">
+        <div class="field">
+          <label for="ra">תוצאת Ra</label>
+          <input id="ra" type="number" inputmode="decimal" min="0" step="0.001" placeholder="לדוגמה: 0.72">
+        </div>
+        <div class="field" style="max-width:220px">
+          <label for="unit">יחידות</label>
+          <select id="unit">
+            <option value="um" selected>מיקרון (µm)</option>
+            <option value="uin">מיקרו-אינטש (µin)</option>
+          </select>
+        </div>
+        <div class="field" style="flex:0 0 auto">
+          <button id="calc" aria-label="חשב דרגת N">חשב</button>
+        </div>
+      </div>
+
+      <div id="out" class="result" aria-live="polite">
+        <h2>עוד לא הוזן ערך</h2>
+        <div class="muted">אחרי החישוב תוצג דרגת N, טווח אינפורמטיבי והמרה ל-µin.</div>
+      </div>
+
+      <details style="margin-top:12px">
+        <summary>הסבר קצר</summary>
+        <div class="muted">
+          הסיווג: בוחרים את הדרגה הקטנה ביותר שעבורה Ra≤נומינל. לדוגמה 0.90 µm → N7 (כי N6=0.8 קטן מדי).
+          אם הערך נמוך מ-N1 נדווח N1. מעל N12 תופיע אזהרת טווח.
+        </div>
+      </details>
+
+      <div style="overflow:auto;max-height:360px;margin-top:10px">
+        <table id="tbl" aria-label="טבלת נומינלים Ra לפי דרגות N">
+          <thead>
+            <tr><th>דרגת N</th><th>Ra [µm]</th><th>Ra [µin]</th></tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </section>
   </div>
 
-  <div class="input-row">
-    <label>+TOL</label>
-    <input id="tolp" type="number" step="0.001" inputmode="decimal">
-  </div>
-
-  <div class="input-row">
-    <label>−TOL</label>
-    <input id="tolm" type="number" step="0.001" inputmode="decimal">
-  </div>
-
-  <button class="primary" onclick="calc()">חשב</button>
-  <button class="secondary" onclick="resetAll()">איפוס</button>
-
-  <div class="resultBox" id="resultBox"></div>
-
-  <div class="legend">
-    <span><span class="dot go"></span>Go</span>
-    <span><span class="dot nogo"></span>No-Go</span>
-  </div>
-
-  <div class="seriesBox" id="series"></div>
-</div>
+  <footer>© 2025 – מחשבון חספוס תעשייתי PRO. מותאם לאייפון 12 ומסכי מגע.</footer>
 
 <script>
-const fmt = v => Number(v).toFixed(3);
+(function(){
+  // נומינלים ל-N1..N12 לפי ISO-Style
+  const N = [
+    {n:1,um:0.025},{n:2,um:0.05},{n:3,um:0.1},{n:4,um:0.2},
+    {n:5,um:0.4},{n:6,um:0.8},{n:7,um:1.6},{n:8,um:3.2},
+    {n:9,um:6.3},{n:10,um:12.5},{n:11,um:25},{n:12,um:50}
+  ];
+  const UIN_PER_UM = 39.37007874; // 1 µm = 39.37 µin
 
-function readNum(id){
-  const el = document.getElementById(id);
-  if(!el) return NaN;
-  const raw = String(el.value).trim().replace(/,/g,'.');
-  return parseFloat(raw);
-}
+  // בניית טבלה
+  const tbody = document.querySelector("#tbl tbody");
+  const fmt = (x,d=3)=>Number(x).toLocaleString('he-IL',{maximumFractionDigits:d});
+  function buildTable(){
+    tbody.innerHTML="";
+    N.forEach(g=>{
+      const tr=document.createElement("tr");
+      tr.dataset.n=g.n;
+      tr.innerHTML = `<td>N${g.n}</td><td>${fmt(g.um,3)}</td><td>${fmt(g.um*UIN_PER_UM,1)}</td>`;
+      tbody.appendChild(tr);
+    });
+  }
+  buildTable();
 
-function blurInputs(){
-  document.querySelectorAll('input').forEach(el=>el.blur());
-}
-
-function calc(){
-  blurInputs();
-  const nom = readNum('nominal');
-  const tp  = readNum('tolp');
-  const tm  = readNum('tolm');
-  const resultBox = document.getElementById('resultBox');
-  const seriesBox = document.getElementById('series');
-
-  seriesBox.style.display = 'none';
-  resultBox.style.display = 'none';
-
-  if(isNaN(nom)){
-    resultBox.style.display = 'block';
-    resultBox.innerHTML = 'יש להזין ערך נומינלי תקין';
-    return;
+  // סיווג
+  function classify(ra,unit){
+    const ra_um = unit==="uin" ? ra/UIN_PER_UM : ra;
+    let grade = null;
+    for(const g of N){ if(ra_um <= g.um + 1e-12){ grade = g; break; } }
+    if(!grade) return {status:"out", ra_um};
+    const i = N.findIndex(x=>x.n===grade.n);
+    const lower = i>0 ? Math.sqrt(N[i-1].um*grade.um) : 0;
+    const upper = i<N.length-1 ? Math.sqrt(grade.um*N[i+1].um) : Infinity;
+    return {status:"ok", grade, ra_um, lower, upper};
   }
 
-  const up = isNaN(tp)?0:tp;
-  const lo = isNaN(tm)?0:tm;
+  // הצגה
+  function explain(res){
+    const out = document.getElementById("out");
+    document.querySelectorAll("#tbl tbody tr").forEach(tr=>tr.classList.remove("hit"));
 
-  const max = nom + up;
-  const min = nom - lo;
+    const unitSel = document.getElementById("unit").value;
+    const inputVal = Number(document.getElementById("ra").value);
+    const ra_um = unitSel==="uin" ? inputVal/UIN_PER_UM : inputVal;
+    const ra_uin = ra_um*UIN_PER_UM;
 
-  resultBox.innerHTML =
-    `<strong>תוצאה:</strong><br><b>${fmt(max)}</b> ⇐ קדח ⇒ <b>${fmt(min)}</b>`;
-  resultBox.style.display = 'block';
-
-  const step = 0.01;
-  const start = Math.ceil(min * 100) / 100;
-  const end   = Math.floor(max * 100) / 100;
-
-  if(start > end){
-    seriesBox.innerHTML = 'אין פינים בתחום זה';
-  } else {
-    let html = '';
-    for(let i = Math.round(start*100); i <= Math.round(end*100); i++){
-      const v = i / 100;
-      const val = fmt(v);
-      if(i === Math.round(start*100))
-        html += `<div class="pin go">${val} <b>Go</b></div>`;
-      else if(i === Math.round(end*100))
-        html += `<div class="pin nogo">${val} <b>No-Go</b></div>`;
-      else
-        html += `<div class="pin">${val}</div>`;
+    if(res.status==="out"){
+      out.innerHTML = `<h2>מחוץ לטווח</h2>
+        <div class="muted">Ra גבוה מ-50 µm (N12). בדוק את תהליך הגימור.</div>
+        <div class="chip">Ra: ${fmt(ra_um,3)} µm</div>
+        <div class="chip">≈ ${fmt(ra_uin,1)} µin</div>`;
+      return;
     }
-    seriesBox.innerHTML = html;
+
+    const row = document.querySelector(`#tbl tr[data-n="${res.grade.n}"]`);
+    if(row) row.classList.add("hit");
+
+    out.innerHTML = `
+      <h2>דרגת N: <span class="tagline">N${res.grade.n}</span></h2>
+      <div class="muted">נבחרה הדרגה הקטנה ביותר שעומדת בערך הנמדד.</div>
+      <div style="margin-top:8px">
+        <span class="chip">Ra = <b>${fmt(ra_um,3)}</b> µm</span>
+        <span class="chip">≈ <b>${fmt(ra_uin,1)}</b> µin</span>
+        <span class="chip">נומינל N${res.grade.n}: ${fmt(res.grade.um,3)} µm</span>
+      </div>
+      <div class="muted" style="margin-top:6px">
+        טווח אינפורמטיבי (חציון לוגריתמי): ${res.lower?fmt(res.lower,3):"—"} עד ${Number.isFinite(res.upper)?fmt(res.upper,3):"∞"} µm
+      </div>`;
   }
 
-  seriesBox.style.display = 'block';
-}
+  function calc(){
+    const ra = Number(document.getElementById("ra").value);
+    const unit = document.getElementById("unit").value;
+    if(!isFinite(ra) || ra < 0){ alert("אנא הזן ערך Ra חוקי."); return; }
+    explain(classify(ra, unit));
+  }
 
-function resetAll(){
-  document.querySelectorAll('input').forEach(el=>el.value='');
-  document.getElementById('resultBox').style.display='none';
-  document.getElementById('series').style.display='none';
-}
+  // קיצורי מקלדת ומגע
+  document.getElementById("calc").addEventListener("click", calc);
+  document.getElementById("ra").addEventListener("keydown", e=>{
+    if(e.key==="Enter") calc();
+  });
+
+  // התאמה למקלדת באייפון 12 (VisualViewport)
+  const card = document.querySelector('.card');
+  const input = document.getElementById('ra');
+  function ensureVisible(el){
+    const r = el.getBoundingClientRect();
+    const vh = (window.visualViewport?.height || window.innerHeight);
+    if(r.bottom > vh - 16){
+      window.scrollBy({top: r.bottom - (vh - 16), behavior:'smooth'});
+    }
+  }
+  ['focus','input'].forEach(ev=>input.addEventListener(ev,()=>ensureVisible(input)));
+
+  if(window.visualViewport){
+    const onVV = ()=>{
+      document.body.style.height = window.visualViewport.height + 'px';
+      // Padding לתחתית כדי למנוע כיסוי ע"י המקלדת
+      card.style.marginBottom = Math.max(0,(window.innerHeight - window.visualViewport.height)+20) + 'px';
+    };
+    window.visualViewport.addEventListener('resize', onVV);
+    window.visualViewport.addEventListener('scroll', onVV);
+  }
+})();
 </script>
 </body>
 </html>
