--- a/MAX.html
+++ b/MAX.html
@@ -106,7 +106,7 @@
 <body>
 
 <div class="container">
-  <div class="title">מכשירי יצור</div>
+  <div class="title">By yossi m</div>
 
   <div class="input-group">
     <label for="nominal">NOM</label>
