--- a/N6.html
+++ b/N6.html
@@ -148,7 +148,7 @@ tr.active {
 </style>
 </head>
 <body>
-  <h2>דרגת N לפי Ra</h2>
+  <h2>  טיב שטח   </h2>
   <div class="sub">   ** By yossi m **  </div>
 
   <div class="card fade">
