--- a/Paintsection.html
+++ b/Paintsection.html
@@ -2,127 +2,92 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>מחשבון מידה לפני צבע</title>
+
   <style>
     * {
       box-sizing: border-box;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
+      -webkit-tap-highlight-color: transparent;
     }
 
     html, body {
       margin: 0;
       padding: 0;
-      background-color: #000000;
-      color: #ffffff;
+      background-color: #000;
+      color: #fff;
+      height: 100%;
+      overflow-x: hidden;
     }
 
     body {
-      min-height: 100vh;
-    }
-
-    .wrapper {
-      max-width: 480px;
-      margin: 0 auto;
-      padding: 12px 12px 24px;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding-top: 25px;
     }
 
     .card {
-      background-color: #111111;
-      border-radius: 16px;
-      padding: 14px 12px 16px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.7);
+      background-color: #111;
+      padding: 26px;
+      width: 92%;
+      max-width: 430px;
+      border-radius: 20px;
+      box-shadow: 0 0 14px rgba(0,0,0,0.7);
     }
 
     .title {
-      font-size: 1.2rem;
-      font-weight: 700;
       text-align: center;
+      font-weight: 700;
+      font-size: 1.35rem;
       margin-bottom: 4px;
     }
 
     .subtitle {
-      font-size: 0.8rem;
       text-align: center;
-      color: #bbbbbb;
-      margin-bottom: 10px;
-    }
-
-    .section-title {
-      margin-top: 8px;
-      margin-bottom: 4px;
       font-size: 0.82rem;
-      color: #dddddd;
-      font-weight: 600;
-      border-bottom: 1px solid #222222;
-      padding-bottom: 2px;
+      color: #cfcfcf;
+      margin-bottom: 22px;
     }
 
     .field {
-      margin-bottom: 8px;
+      margin-bottom: 16px;
     }
 
     .field label {
       display: block;
-      font-size: 0.8rem;
-      margin-bottom: 3px;
-    }
-
-    .field input[type="number"] {
-      width: 100%;
-      padding: 8px 9px;
-      border-radius: 10px;
-      border: 1px solid #333333;
-      background-color: #1b1b1b;
-      color: #ffffff;
       font-size: 0.9rem;
+      margin-bottom: 4px;
     }
 
-    .field input[type="number"]::placeholder {
-      color: #666666;
-      font-size: 0.78rem;
+    .field input {
+      width: 100%;
+      padding: 13px;
+      border-radius: 12px;
+      border: 1px solid #333;
+      background-color: #1a1a1a;
+      color: #fff;
+      font-size: 1rem;
     }
 
-    .field input[type="number"]:focus {
+    .field input:focus {
+      border-color: #00baff;
+      box-shadow: 0 0 0 1px #00baff66;
       outline: none;
-      border-color: #00b4ff;
-      box-shadow: 0 0 0 1px #00b4ff33;
-    }
-
-    .row {
-      display: flex;
-      gap: 6px;
-    }
-
-    .row .field {
-      flex: 1;
-      margin-bottom: 8px;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 6px;
-      margin-top: 4px;
     }
 
     .btn {
-      flex: 1;
-      padding: 9px 0;
+      width: 100%;
+      padding: 15px 0;
       border: none;
-      border-radius: 999px;
-      font-size: 0.95rem;
-      font-weight: 600;
-      cursor: pointer;
-    }
-
-    .btn-main {
+      border-radius: 14px;
       background: linear-gradient(135deg, #00c3ff, #0077ff);
-      color: #ffffff;
-    }
-
-    .btn-secondary {
-      background-color: #222222;
-      color: #dddddd;
+      color: #fff;
+      font-weight: 700;
+      font-size: 1.05rem;
+      cursor: pointer;
+      margin-top: 4px;
     }
 
     .btn:active {
@@ -130,198 +95,81 @@
     }
 
     .results {
-      margin-top: 12px;
-      padding: 10px;
-      border-radius: 12px;
-      background-color: #181818;
-      border: 1px solid #262626;
-    }
-
-    .results-block {
-      margin-bottom: 8px;
-    }
-
-    .results-title {
-      font-size: 0.8rem;
-      font-weight: 600;
-      margin-bottom: 4px;
-      color: #cccccc;
-    }
-
-    .result-row {
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      margin-bottom: 3px;
-      font-size: 0.82rem;
+      margin-top: 22px;
+      line-height: 1.7;
     }
 
     .result-label {
-      color: #bbbbbb;
+      font-size: 0.9rem;
+      color: #bbb;
+      margin-bottom: 4px;
     }
 
     .result-value {
+      display: block;
       font-weight: 700;
-      font-family: "SF Mono", "Courier New", monospace;
-      font-size: 0.9rem;
+      font-family: "Courier New", monospace;
+      font-size: 1.15rem;
+      margin-bottom: 12px;
     }
 
-    .result-main {
+    /* התוצאה הסופית – מוגדלת כמו שביקשת */
+    .final {
+      font-size: 1.75rem;
       color: #00e676;
-      font-size: 0.95rem;
+      margin-top: 6px;
+      font-weight: 900;
     }
 
-    .note {
-      margin-top: 6px;
-      font-size: 0.7rem;
-      color: #888888;
-      text-align: center;
-      line-height: 1.3;
-    }
   </style>
 </head>
 <body>
-  <div class="wrapper">
-    <div class="card">
-      <div class="title">מחשבון מידה לפני צבע</div>
-      <div class="subtitle">עובי צבע × 2 ומידת עיבוד לפני צבע</div>
 
-      <div class="section-title">קלט</div>
+  <div class="card">
 
-      <div class="field">
-        <label for="paint">עובי צבע נדרש (מ״מ)</label>
-        <input id="paint" type="number" step="0.001" inputmode="decimal" placeholder="לדוגמה: 0.008">
-      </div>
+    <div class="title">מחשבון מידה לפני צבע</div>
+    <div class="subtitle">עובי צבע × 2 ומידת עיבוד לפני צבע</div>
 
-      <div class="row">
-        <div class="field">
-          <label for="tolMinus">טלורנס מינוס (מ״מ) – אופציונלי</label>
-          <input id="tolMinus" type="number" step="0.001" inputmode="decimal" placeholder="לדוגמה: 0.002">
-        </div>
-        <div class="field">
-          <label for="tolPlus">טלורנס פלוס (מ״מ) – אופציונלי</label>
-          <input id="tolPlus" type="number" step="0.001" inputmode="decimal" placeholder="לדוגמה: 0.002">
-        </div>
-      </div>
-
-      <div class="field">
-        <label for="drawing">מידה בשרטוט אחרי צבע (מ״מ)</label>
-        <input id="drawing" type="number" step="0.001" inputmode="decimal" placeholder="לדוגמה: 20.000">
-      </div>
-
-      <div class="buttons">
-        <button class="btn btn-main" onclick="calculate()">חשב</button>
-        <button class="btn btn-secondary" onclick="clearAll()">נקה</button>
-      </div>
-
-      <div class="results">
-        <div class="results-block">
-          <div class="results-title">תוצאה נומינלית</div>
-          <div class="result-row">
-            <div class="result-label">עובי צבע × 2 (מ״מ):</div>
-            <div class="result-value" id="paint2">—</div>
-          </div>
-          <div class="result-row">
-            <div class="result-label">מידה לעיבוד לפני צבע (מ״מ):</div>
-            <div class="result-value result-main" id="finalDim">—</div>
-          </div>
-        </div>
-
-        <div class="results-block" id="tolBlock" style="display:none;">
-          <div class="results-title">טווח לפי טלורנס צבע</div>
-          <div class="result-row">
-            <div class="result-label">עובי צבע מינ׳ / מק׳ (מ״מ):</div>
-            <div class="result-value" id="paintRange">—</div>
-          </div>
-          <div class="result-row">
-            <div class="result-label">מידת עיבוד מינ׳ / מק׳ (מ״מ):</div>
-            <div class="result-value" id="dimRange">—</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="note">
-        נוסחה בסיסית: מידה לפני צבע = מידה בשרטוט − (עובי צבע × 2)<br>
-        בטלורנס: מחושב טווח לפי עובי צבע מינימלי ומקסימלי.
-      </div>
+    <div class="field">
+      <label>עובי צבע נדרש (מ״מ)</label>
+      <input id="paint" type="number" step="0.001" placeholder="לדוגמה: 0.008">
     </div>
+
+    <div class="field">
+      <label>מידה בשרטוט (מ״מ)</label>
+      <input id="drawing" type="number" step="0.001" placeholder="לדוגמה: 23.625">
+    </div>
+
+    <button class="btn" onclick="calc()">חשב</button>
+
+    <div class="results">
+      <div class="result-label">עובי צבע × 2 (מ״מ)</div>
+      <span class="result-value" id="res1">—</span>
+
+      <div class="result-label">מידה לעיבוד לפני צבע (מ״מ)</div>
+      <span class="result-value final" id="res2">—</span>
+    </div>
+
   </div>
 
   <script>
-    function parseNum(id) {
-      const raw = document.getElementById(id).value.replace(",", ".");
-      const v = parseFloat(raw);
-      return isNaN(v) ? null : v;
-    }
+    function calc() {
+      const p = parseFloat(document.getElementById("paint").value.replace(",", "."));
+      const d = parseFloat(document.getElementById("drawing").value.replace(",", "."));
 
-    function formatNumber(v) {
-      if (v === null || isNaN(v)) return "—";
-      return v.toFixed(3);
-    }
-
-    function calculate() {
-      const paint = parseNum("paint");
-      const tolMinus = parseNum("tolMinus");
-      const tolPlus = parseNum("tolPlus");
-      const drawing = parseNum("drawing");
-
-      const paint2El = document.getElementById("paint2");
-      const finalDimEl = document.getElementById("finalDim");
-      const tolBlock = document.getElementById("tolBlock");
-      const paintRangeEl = document.getElementById("paintRange");
-      const dimRangeEl = document.getElementById("dimRange");
-
-      if (paint === null || drawing === null) {
-        paint2El.textContent = "—";
-        finalDimEl.textContent = "—";
-        tolBlock.style.display = "none";
+      if (isNaN(p) || isNaN(d)) {
+        document.getElementById("res1").textContent = "—";
+        document.getElementById("res2").textContent = "—";
         return;
       }
 
-      const paint2 = paint * 2;
-      const finalDim = drawing - paint2;
+      const paint2 = (p * 2).toFixed(3);
+      const beforePaint = (d - (p * 2)).toFixed(3);
 
-      paint2El.textContent = formatNumber(paint2);
-      finalDimEl.textContent = formatNumber(finalDim);
-
-      const hasTol = tolMinus !== null || tolPlus !== null;
-      if (!hasTol) {
-        tolBlock.style.display = "none";
-        return;
-      }
-
-      const minPaint = tolMinus !== null ? (paint - tolMinus) : paint;
-      const maxPaint = tolPlus  !== null ? (paint + tolPlus)  : paint;
-
-      const minPaint2 = minPaint * 2;
-      const maxPaint2 = maxPaint * 2;
-
-      const minPre = drawing - maxPaint2; // הכי הרבה צבע → הכי פחות חומר
-      const maxPre = drawing - minPaint2; // הכי מעט צבע → הכי הרבה חומר
-
-      paintRangeEl.textContent = formatNumber(minPaint) + " / " + formatNumber(maxPaint);
-      dimRangeEl.textContent   = formatNumber(minPre)  + " / " + formatNumber(maxPre);
-
-      tolBlock.style.display = "block";
+      document.getElementById("res1").textContent = paint2;
+      document.getElementById("res2").textContent = beforePaint;
     }
-
-    function clearAll() {
-      ["paint","tolMinus","tolPlus","drawing"].forEach(id => {
-        document.getElementById(id).value = "";
-      });
-      document.getElementById("paint2").textContent = "—";
-      document.getElementById("finalDim").textContent = "—";
-      document.getElementById("tolBlock").style.display = "none";
-    }
-
-    ["paint","tolMinus","tolPlus","drawing"].forEach(id => {
-      document.getElementById(id).addEventListener("keydown", function(e) {
-        if (e.key === "Enter") {
-          e.preventDefault();
-          calculate();
-        }
-      });
-    });
   </script>
+
 </body>
 </html>
