--- a/Paintsection.html
+++ b/Paintsection.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 
-  <!-- חובה: מונע זום, מונע שינוי גודל כשמקלדת נפתחת -->
+  <!-- מקלדת רספונסיבית לאייפון + ביטול זום -->
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0,
         maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
@@ -21,25 +21,22 @@
       margin: 0;
       padding: 0;
       width: 100%;
-      height: 100%;
+      min-height: 100vh;
       background-color: #000;
       color: #fff;
-      overflow: hidden;            /* מונע זוזה וגלילה כשמקלדת עולה */
-      position: fixed;             /* קיבוע מוחלט – לא זז */
-      top: 0;
-      left: 0;
+
+      /* קריטי למקלדת באייפון */
+      overflow-x: hidden;
+      overflow-y: auto;
       touch-action: manipulation;
+      -webkit-overflow-scrolling: touch;
     }
 
     .container {
       width: 100%;
-      height: 100%;
       display: flex;
       justify-content: center;
-      align-items: flex-start;
-      padding-top: 24px;
-      overflow-y: auto;            /* גלילה פנימית (מבוקר) */
-      -webkit-overflow-scrolling: touch;
+      padding: 28px 0;
     }
 
     .card {
@@ -95,7 +92,7 @@
       color: #00e676;
     }
 
-    /* קלט */
+    /* שדות קלט */
     .field {
       margin-bottom: 18px;
     }
@@ -110,12 +107,16 @@
     .field input {
       width: 100%;
       padding: 15px;
-      font-size: 1.15rem;
-      line-height: 1.1;               /* מונע קפיצות עיצוב בזמן פוקוס */
+      font-size: 1.20rem;
+      line-height: 1.1;
+
       background-color: #1a1a1a;
       border: 1px solid #333;
       border-radius: 12px;
       color: #fff;
+
+      /* מקלדת מספרית אמיתית לאייפון */
+      -webkit-text-size-adjust: 100%;
     }
 
     .field input:focus {
@@ -162,12 +163,20 @@
 
     <div class="field">
       <label>עובי צבע נדרש (מ״מ)</label>
-      <input id="paint" type="number" step="0.001" placeholder="לדוגמה: 0.008">
+      <input id="paint" 
+             type="text" 
+             inputmode="decimal" 
+             pattern="[0-9]*"
+             placeholder="לדוגמה: 0.008">
     </div>
 
     <div class="field">
       <label>מידה בשרטוט (מ״מ)</label>
-      <input id="drawing" type="number" step="0.001" placeholder="לדוגמה: 23.625">
+      <input id="drawing" 
+             type="text" 
+             inputmode="decimal" 
+             pattern="[0-9]*"
+             placeholder="לדוגמה: 23.625">
     </div>
 
     <button class="btn" onclick="calc()">חשב</button>
@@ -176,9 +185,13 @@
 </div>
 
 <script>
+function fix(val) {
+  return parseFloat(val.replace(",", "."));
+}
+
 function calc() {
-  const p = parseFloat(document.getElementById("paint").value.replace(",", "."));
-  const d = parseFloat(document.getElementById("drawing").value.replace(",", "."));
+  const p = fix(document.getElementById("paint").value);
+  const d = fix(document.getElementById("drawing").value);
 
   if (isNaN(p) || isNaN(d)) {
     document.getElementById("res1").textContent = "—";
